# python_microservice_template

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  mypy.ini  pyproject.toml
configs/: configs.example.yaml
src/core/: config.py  database.py  logger.py
