[tool.poetry]
name = "python-microservice-template"
version = "0.1.0"
description = "Unified python microservice template"
authors = ["GAKiknadze <gakiknadze@yandex.ru>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
# Tests
test = "pytest --cov=app"
# gRPC
gen_proto = "grpc_tools.protoc -I protobufs/ --python_out=app/grpc/generated --grpc_python_out=app/grpc/generated"
# Docker
docker_cleanup = """
    echo "Stopping project containers..."
    docker ps -a | grep "example_service" | awk '{print $$1}' | xargs -r docker stop

    echo "Removing project containers..."
    docker ps -a | grep "example_service" | awk '{print $$1}' | xargs -r docker rm

    echo "Removing project images..."
    docker images | grep "example_service" | awk '{print $$3}' | xargs -r docker rmi

    echo "Cleanup of project containers complete!"
"""